develop gallery block

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,6 @@
       </div>
     </header>
 
-
     <aside class="page__menu menu " id="menu">
       <div class="container">
         <div class="menu__content">
@@ -195,6 +194,104 @@
         <div class="container">
           <div class="gallery__content">
             <h2 class="gallery__title section__title">Галерея</h2>
+
+            <div class="gallery__slider slider">
+              <div class="slider__slides">
+                <input
+                  class="slider__radio-input"
+                  type="radio"
+                  name="r"
+                  id="r1"
+                  checked
+                >
+
+                <input
+                  class="slider__radio-input"
+                  type="radio"
+                  name="r"
+                  id="r2"
+                >
+
+                <input
+                  class="slider__radio-input"
+                  type="radio"
+                  name="r"
+                  id="r3"
+                >
+
+                <input
+                  class="slider__radio-input"
+                  type="radio"
+                  name="r"
+                  id="r4"
+                >
+
+                <div class="slider__slide s1">
+                  <img
+                    class="slider__img"
+                    src="./images/gallery/01.png"
+                    alt="Slider image"
+                  >
+                </div>
+
+                <div class="slider__slide">
+                  <img
+                    class="slider__img"
+                    src="./images/gallery/02.png"
+                    alt="Slider image"
+                  >
+                </div>
+
+                <div class="slider__slide">
+                  <img
+                    class="slider__img"
+                    src="./images/gallery/03.png"
+                    alt="Slider image"
+                  >
+                </div>
+
+                <div class="slider__slide">
+                  <img
+                    class="slider__img"
+                    src="./images/gallery/04.png"
+                    alt="Slider image"
+                  >
+                </div>
+              </div>
+
+              <div class="slider__nav">
+                <label for="r1" class="slider__bar"></label>
+                <label for="r2" class="slider__bar"></label>
+                <label for="r3" class="slider__bar"></label>
+                <label for="r4" class="slider__bar"></label>
+              </div>
+            </div>
+
+            <div class="gallery__img-grid img-grid">
+              <img
+                src="./images/gallery/img-grid/01.png"
+                alt="Image"
+                class="img-grid__item img-grid__item--01"
+              >
+
+              <img
+                src="./images/gallery/img-grid/02.png"
+                alt="Image"
+                class="img-grid__item img-grid__item--02"
+              >
+
+              <img
+                src="./images/gallery/img-grid/03.png"
+                alt="Image"
+                class="img-grid__item img-grid__item--03"
+              >
+
+              <img
+                src="./images/gallery/img-grid/04.png"
+                alt="Image"
+                class="img-grid__item img-grid__item--04"
+              >
+            </div>
           </div>
         </div>
       </section>
