Add slider gallery on mobile and tablet

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
 
   <body class="page__body">
@@ -255,15 +256,39 @@
             <img
               src="images/gallery/Gallery painting 1.png"
               alt="Gallery painting 1"
-              class="gallery__image"
+              class="gallery__image gallery__image--mobile"
             >
 
             <img
-              src="images/gallery/Gallery painting 2 tablet.png"
-              alt="Gallery painting 2 tablet"
-              class="gallery__image gallery__image--tablet"
+              src="images/gallery/Gallery painting 2.png"
+              alt="Gallery painting 2"
+              class="gallery__image gallery__image--mobile"
             >
 
+            <img
+              src="images/gallery/Gallery painting 3.png"
+              alt="Gallery painting 3"
+              class="gallery__image gallery__image--mobile"
+            >
+
+            <img
+              src="images/gallery/Gallery painting 4.png"
+              alt="Gallery painting 4"
+              class="gallery__image gallery__image--mobile"
+            >
+
+            <img
+            src="images/gallery/Gallery painting 1.png"
+            alt="Gallery painting 1"
+            class="gallery__image gallery__image--mobile"
+          >
+            <img
+              src="images/gallery/Gallery painting 1 desktop.png"
+              alt="Gallery painting 1 desktop"
+              class="
+                gallery__image
+                gallery__image--desktop
+           ">
             <img
               src="images/gallery/Gallery painting 2 desktop.png"
               alt="Gallery painting 2 desktop"
@@ -285,8 +310,17 @@
             <img
               src="images/gallery/Gallery painting 4 desktop.png"
               alt="Gallery painting 4 desktop"
-              class="gallery__image gallery__image--desktop"
-            >
+              class="
+                gallery__image
+                gallery__image--desktop
+           ">
+          </div>
+
+          <div class="gallery__dots">
+            <div class="gallery__dot"></div>
+            <div class="gallery__dot"></div>
+            <div class="gallery__dot"></div>
+            <div class="gallery__dot"></div>
           </div>
         </section>
 
