--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,461 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html
+  lang="uk"
+  class="page"
+  id="page"
+>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>NAMU</title>
+
+    <!--Favicon-->
+    <link
+      rel="shortcut icon"
+      href="images/favicon.svg"
+      type="image/x-icon"
+    >
+
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto&display=swap"
+      rel="stylesheet">
+
+    <!--Style-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+    <link rel="stylesheet" href="styles/main.scss">
+
+    <!--Scripts-->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="scripts/lib/swiper.js" defer></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
-    <h1>Arthur</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__bg"></div>
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a
+              href="#menu"
+              class="icon icon--open"
+              aria-label="Перейти до меню"
+            >
+            </a>
+            <a
+              href="#page"
+              class="icon--logo top-bar__logo"
+              aria-label="Логотип музею"
+            >
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+            <a class="header__button" href="#events">
+              <span class="header__button--left">Квитки</span>
+              <span class="header__button--right"></span>
+            </a>
+
+            <span class="header__aside">ПОДІЇ</span>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="icon icon--close"></a>
+
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#gallery">Галерея</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#subscribe">Про нас</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#contact">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="menu__bottom">
+            <h4 class="menu__title">Графік роботи</h4>
+            <div class="menu__wrapper">
+              <ul class="schedule">
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">12:00 — 20:00</time>
+                  середа
+                </li>
+
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">12:00 — 20:00</time>
+                  четвер
+                </li>
+
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">12:00 — 20:00</time>
+                  п’ятниця
+                </li>
+
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">11:00 — 19:00</time>
+                  субота
+                </li>
+
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">11:00 — 19:00</time>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="schedule__on-weekend">
+                <strong>Вихідні:</strong> понеділок,
+                вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu__blur"></div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section class="events" id="events">
+          <div class="container">
+            <h2 class="section__title events__title">Актуальні події</h2>
+
+            <div class="events__cards">
+              <section class="events__card">
+                <img
+                  src="images/events/photo-1.jpg"
+                  alt="Картина 'Йду і повертаюсь'"
+                  class="events__photo"
+                >
+
+                <div class="events__card-info">
+                  <p class="events__time">
+                    <span class="events__time--left">ВИСТАВКА</span>
+                    <time class="events__time--right">26.08-29.11.2019</time>
+                  </p>
+
+                  <h3 class="events__card-title events__card-title--orange--marker">Йду і повертаюсь</h3>
+
+                  <p class="events__description">Національний Художній Музей України презентує унікальну частину
+                    колекції
+                    Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+              </section>
+
+              <section class="events__card">
+                <img
+                  src="images/events/photo-2.jpg"
+                  alt="І спогади і мрії'"
+                  class="events__photo"
+                >
+
+                <div class="events__card-info">
+                  <p class="events__time">
+                    <span class="events__time--left">ВИСТАВКА</span>
+                    <span class="events__time--right">26.08-29.11.2019</span>
+                  </p>
+
+                  <h3 class="events__card-title events__card-title--orange--marker">І спогади і мрії</h3>
+
+                  <p class="events__description">Національний художній музей України до 100 річчя від дня народження
+                    видатної
+                    української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+
+              </section>
+
+              <section class="events--lecture">
+                <div class="events__image-lecture"></div>
+
+                <div class="events__card-info-lecture">
+                  <p class="events__time-lecture">
+                    <span class="events__time--left">ЛЕКЦІЯ</span>
+                    <span class="events__time--right">26/08/2019 - 11:00</span>
+                  </p>
+
+                  <h3 class="events__card-title-lecture">Від класицизму до романтизму</h3>
+                </div>
+              </section>
+            </div>
+          </div>
+        </section>
+
+        <section class="gallery" id="gallery">
+          <div class="container">
+            <h2 class="section__title gallery__title">Галерея</h2>
+
+            <div class="gallery__content">
+              <div class="gallery__images">
+                <img
+                  src="./images/gallery/photo-1.jpg"
+                  alt="Gallery image"
+                  class="gallery__image gallery__image--narrow"
+                >
+
+                <img
+                  src="./images/gallery/photo-2.jpg"
+                  alt="Gallery image"
+                  class="gallery__image gallery__image--wide"
+                >
+
+                <img
+                  src="./images/gallery/photo-3.jpg"
+                  alt="Gallery image"
+                  class="gallery__image gallery__image--wide"
+                >
+
+                <img
+                  src="./images/gallery/photo-4.jpg"
+                  alt="Gallery image"
+                  class="gallery__image gallery__image--narrow"
+                >
+              </div>
+
+              <div class="swiper gallery__swiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/gallery/photo-1.jpg"
+                      alt="Gallery image"
+                      class="swiper-slide__image"
+                    >
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/gallery/photo-2.jpg"
+                      alt="Gallery image"
+                      class="swiper-slide__image"
+                    >
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/gallery/photo-3.jpg"
+                      alt="Gallery image"
+                      class="swiper-slide__image"
+                    >
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/gallery/photo-4.jpg"
+                      alt="Gallery image"
+                      class="swiper-slide__image"
+                    >
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+
+          </div>
+        </section>
+
+        <section class="subscription" id="subscribe">
+          <div class="container">
+            <div class="subscription__content">
+              <h2 class="section__title subscription__title">Підписка</h2>
+
+              <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+              <form
+                class="subscription__button"
+                action="#"
+                method="post"
+                onsubmit="this.reset(); return false;"
+              >
+                <input
+                  type="email"
+                  class="subscription__button--left"
+                  placeholder="E-mail"
+                ></input>
+                <button type="submit" class="subscription__button--right"></button>
+              </form>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer" id="contact">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__link">
+            <a
+              href="#"
+              class="icon--logo"
+              aria-label="Логотип музею"
+            >
+              NA
+              <br>
+              MU
+            </a>
+
+            <ul class="social">
+              <li class="social__item-fb">
+                <a
+                  href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                  target="_blank"
+                  class="social__link"
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M2.7198 4.64899C2.7198 5.2538 2.7198 7.9533 2.7198 7.9533H0.302734V11.9938H2.7198V24.0009H7.68498V11.9942H11.0168C11.0168 11.9942 11.3289 10.0568 11.4801 7.93841C11.0465 7.93841 7.70375 7.93841 7.70375 7.93841C7.70375 7.93841 7.70375 5.58776 7.70375 5.17573C7.70375 4.76282 8.24511 4.2074 8.78017 4.2074C9.31423 4.2074 10.4414 4.2074 11.4854 4.2074C11.4854 3.65727 11.4854 1.75647 11.4854 0.000976577C10.0917 0.000976577 8.50612 0.000976577 7.80721 0.000976577C2.59707 0.000697581 2.7198 4.04524 2.7198 4.64899Z">
+                    </path>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item-inst">
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  class="social__link"
+                  target="_blank"
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_12665_559)">
+                      <path
+                        d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623V18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z">
+                      </path>
+                      <path
+                        d="M12.0001 6.84465C9.15753 6.84465 6.84473 9.15727 6.84473 12C6.84473 14.8425 9.15753 17.1553 12.0001 17.1553C14.8428 17.1553 17.1554 14.8425 17.1554 12C17.1554 9.15727 14.8428 6.84465 12.0001 6.84465Z">
+                      </path>
+                      <path
+                        d="M18.7191 4.51408C18.4258 4.51408 18.187 4.75285 18.187 5.04619C18.187 5.33952 18.4258 5.57829 18.7191 5.57829C19.0126 5.57829 19.2514 5.3397 19.2514 5.04619C19.2514 4.75267 19.0126 4.51408 18.7191 4.51408Z">
+                      </path>
+                    </g>
+                    <defs>
+                      <clippath id="clip0_12665_559">
+                        <rect width="24" height="24"></rect>
+                      </clippath>
+                    </defs>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__schedule">
+            <h4 class="footer__schedule-title">Графік роботи</h4>
+
+            <ul class="schedule">
+              <li class="schedule__text">
+                <time class="schedule__text--bold">12:00 — 20:00</time>
+                середа
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">12:00 — 20:00</time>
+                четвер
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">12:00 — 20:00</time>
+                п’ятниця
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">11:00 — 19:00</time>
+                субота
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">11:00 — 19:00</time>
+                неділя
+              </li>
+            </ul>
+
+            <p class="schedule__on-weekend">
+              <strong>Вихідні:</strong> понеділок,
+              вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="contact footer__contact">
+            <h4 class="contact__title footer__contact-title">Контакти:</h4>
+
+            <ul class="contact__list">
+              <li class="contact__item">
+                <a href="https://goo.gl/maps/pwqfvXxsF41ewwxE6" class="contact__link">вул. М. Грушевського, 6; Київ,
+                  01001
+                </a>
+              </li>
+
+              <li class="contact__item">
+                <a href="tel:+380442781357" class="contact__link">тел. +38 (044) 278-13-57</a>
+              </li>
+
+              <li class="contact__item">
+                <a href="tel:+380442787454" class="contact__link">факс +38 (044) 278-74-54</a>
+              </li>
+
+              <li class="contact__item">
+                <a href="mailto:info@namu.kiev.ua" class="contact__link"> e-mail: info@namu.kiev.ua</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__line">
+            <a href="#page"></a>
+          </div>
+
+          <ul class="footer__list-media footer__nav">
+            <li class="footer__item">
+              <a href="#gallery" class="footer__item-link">Галерея</a>
+            </li>
+
+            <li class="footer__item">
+              <a href="#events" class="footer__item-link">Виставки та події</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list-about footer__nav">
+            <li class="footer__item">
+              <a href="#subscribe" class="footer__item-link">Про Нас</a>
+            </li>
+
+            <li class="footer__item">
+              <a href="#contact" class="footer__item-link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyright">
+          <span>Copyright © 2023. All Rights Reserved.</span>
+          <span>Designed by Zhyriada Marina</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
