started optimizing for tablet

--- a/src/index.html
+++ b/src/index.html
@@ -203,24 +203,34 @@
             >
           </a>
 
-          <a href="#header" class="icons--logo">
-            <img
-              src="/images/icons/fb-logo.svg"
-              alt="facebook logo"
-              class="icons--img"
+          <div class="icons__social">
+            <a
+              href="https://www.facebook.com"
+              class="icons__social--logo"
+              target="_blank"
             >
-          </a>
+              <img
+                src="/images/icons/fb-logo.svg"
+                alt="facebook logo"
+                class="icons__social--img"
+              >
+            </a>
 
-          <a href="#header" class="icons--logo">
-            <img
-              src="/images/icons/instagram.svg"
-              alt="instagram logo"
-              class="icons--img"
+            <a
+              href="https://www.instagram.com"
+              class="icons__social--logo"
+              target="_blank"
             >
-          </a>
+              <img
+                src="/images/icons/instagram.svg"
+                alt="instagram logo"
+                class="icons__social--img"
+              >
+            </a>
+          </div>
         </div>
 
-        <div class="footer__info--schedule schedule">
+        <div class="footer__info--schedule schedule" id="about-us">
           <h4 class="schedule--title">Графік роботи</h4>
           <p class="schedule--schedule">
             <strong>12:00 — 20:00</strong> <br>середа<br>
@@ -229,13 +239,13 @@
             <strong>11:00 — 19:00</strong> <br>субота<br>
             <strong>11:00 — 19:00</strong> <br>неділя<br>
 
-            Вихідні понеділок, вівторок<br>
+            <br>Вихідні понеділок, вівторок<br>
             Каса припиняє роботу за 1 годину
             до закриття музею
           </p>
         </div>
 
-        <div class="footer__info--contacts">
+        <div class="footer__info--contacts contacts" id="contacts">
           <h4 class="contacts--title">Контакти:</h4>
           <p class="contacts--schedule">
             вул. М. Грушевського, 6; Київ, 01001<br>
@@ -273,6 +283,7 @@
         <p class="footer__copyright--rights">Copyright © 2019. All Rights Reserved.</p>
       </section>
     </footer>
+    <!-- #endregion -->
   </body>
 </html>
 
