fix problem with hover underline add set max-width for tiсkets 350px

--- a/src/index.html
+++ b/src/index.html
@@ -355,7 +355,7 @@
             <div class="footer__schedule schedule">
               <p class="schedule__title">Графік роботи</p>
 
-              <div class="schedule__wrapper">
+              <div class="schedule__wrapper schedule__wrapper--onTable-direction--column">
                 <ul class="schedule__list">
                   <li class="schedule__item"><span>12.00 — 20:00</span> середа</li>
                   <li class="schedule__item"><span>12.00 — 20:00</span> четвер</li>
