Update modification for Museum

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <script src="scripts/lib/swiper.js" defer></script>
     <script src="scripts/main.js" defer></script>
   </head>
-  <body>
+  <body class="page__body page__body--with-menu">
     <header class="header">
       <div class="header__bg"></div>
       <div class="container">
