Update line on meta tag and add atribut target on footer adress

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
 >
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NAMU</title>
 
@@ -407,7 +406,11 @@
 
             <ul class="contact__list">
               <li class="contact__item">
-                <a href="https://goo.gl/maps/pwqfvXxsF41ewwxE6" class="contact__link">вул. М. Грушевського, 6; Київ,
+                <a
+                  href="https://goo.gl/maps/pwqfvXxsF41ewwxE6"
+                  class="contact__link"
+                  target="_blank"
+                >вул. М. Грушевського, 6; Київ,
                   01001
                 </a>
               </li>
