Delete class on body and formation tag "a"

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <script src="scripts/lib/swiper.js" defer></script>
     <script src="scripts/main.js" defer></script>
   </head>
-  <body class="page__body page__body--with-menu">
+  <body class="page__body">
     <header class="header">
       <div class="header__bg"></div>
       <div class="container">
@@ -410,7 +410,8 @@
                   href="https://goo.gl/maps/pwqfvXxsF41ewwxE6"
                   class="contact__link"
                   target="_blank"
-                >вул. М. Грушевського, 6; Київ,
+                >
+                  вул. М. Грушевського, 6; Київ,
                   01001
                 </a>
               </li>
