--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,338 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300,400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300,400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="top-bar">
+          <div class="top-bar__icon">
+            <a href="#menu" class="icon icon--menu"></a>
+          </div>
+          <a href="#home" class="top-bar__logo-link">
+            <img
+              src="images/namu_logo.svg"
+              class="top-bar__logo"
+              alt="Namu logo"
+            >
+          </a>
+        </div>
+        <div class="header__content">
+          <div class="header__left">
+            <h3 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h3>
+            <div class="header__left-button">
+              <img src="images/buy-tickets.svg" alt="buy tickets">
+            </div>
+            <div class="header__left-event">
+              <span class="header__left-event-text" >ПОДІЇ</span>
+              <div class="header__left-event-linear"></div>
+            </div>
+          </div>
+          <div class="header__right">
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="menu__container">
+          <div class="top-bar menu__top">
+            <a href="#" class="icon icon--close"></a>
+          </div>
+          <div class="menu__bottom">
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav__link">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a
+                  href="#events" class="nav__link">Виставки та  події</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#about_us" class="nav__link">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#contacts" class="nav__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu__schedule">
+            <div class="menu-linear"></div>
+            <a href="#contacts" class="menu__schedule__title">
+              Графік роботи
+            </a>
+            <div class="menu__schedule-wrapper">
+              <p>
+                <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  середа <br>
+                <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  четвер <br>
+                <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  п’ятниця <br>
+                <span class="menu__schedule-wrapper-bold">11:00 — 19:00</span> субота <br>
+                <span class="menu__schedule-wrapper-bold">11:00 — 19:00</span> неділя <br>
+              </p>
+              <p>
+                <span class="menu__schedule-wrapper-bold"> Вихідні</span>: понеділок, <br>
+                   вівторок <br>
+                  Каса припиняє роботу за <br>
+                  1 годину до закриття <br>
+                  музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section class="events" id="events">
+            <h2 class="
+              events__title
+              section-title
+              section-title-align-left
+            ">
+             Актуальні події
+            </h2>
+            <article class="event">
+              <a href="#" class="event__photo">
+                <img
+                  src="images/event-1.png"
+                  alt="EVENT"
+                  class="event__photo-art"
+                >
+              </a>
+              <div class="event__text">
+                <span class="event__info">ВИСТАВКА</span>
+                <span class="event__date">26.08-29.11.2019</span>
+                <div class="event__title">
+                  <p class="event__titl">Йду і повертаюсь</p>
+                  <img src="images/cub.svg" alt="cub">
+                </div>
+                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </article>
+            <article class="event">
+              <a href="#" class="event__photo">
+                <img
+                  src="images/event-2.png"
+                  alt="EVENT"
+                  class="event__photo-art"
+                >
+              </a>
+              <div class="event__text">
+                <span class="event__info">ВИСТАВКА</span>
+                <span class="event__date">26.08-29.11.2019</span>
+                <div class="event__title">
+                  <p class="event__titl">І спогади і мрії</p>
+                  <img src="images/cub.svg" alt="cub">
+                </div>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </article>
+            <article class="event__lecture">
+              <a href="#" class="event__lecture-photo">
+                <img
+                  src="images/lecture.png"
+                  alt="EVENT"
+                  class="event__lecture-art"
+                >
+              </a>
+              <div class="event__lecture-wrapper">
+                <div class="event__lecture-text">
+                  <div class="event__lecture__title">
+                    <span class="event__lecture-info">ЛЕКЦІЯ</span>
+                    <span class="event__lecture-date">26/08/2019 - 11:00</span>
+                  </div>
+                  <p class="event__lecture-title">Від класицизму до романтизму</p>
+                </div>
+              </div>
+            </article>
+          </section>
+          <section class="gallery" id="gallery">
+            <h2 class="
+              gallery__title
+              section-title
+              section-title-align-left
+            ">
+             Галерея
+            </h2>
+            <div class="gallery-wrapper">
+              <div class="gallery__photos slider">
+                <a
+                  href="#"
+                  class="gallery__link gallery__link--rectangle slide"
+                  id="slide-1">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery-1.png"
+                    alt="Range & Integrated lights"
+                  >
+                </a>
+                <a
+                  href="#"
+                  class="gallery__link gallery__link--wide slide"
+                  id="slide-2">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery-2.png"
+                    alt="Range & Integrated lights"
+                  >
+                </a>
+                <a href="#" class="gallery__link gallery__link--wide slide" id="slide-3">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery-3.png"
+                    alt="Range & Integrated lights"
+                  >
+                </a>
+                <a href="#" class="gallery__link gallery__link--square slide" id="slide-4">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery-4.png"
+                    alt="Range & Integrated lights"
+                  >
+                </a>
+              </div>
+              <div class="dots">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
+              </div>
+            </div>
+          </section>
+          <section class="subscribe" id="subscribe">
+            <article class="subscribe__container">
+              <a href="#" class="subscribe-photo">
+                <img
+                  src="images/subscription.png"
+                  alt="Subscribe"
+                  class="subscribe-img"
+                >
+              </a>
+              <div class="subscribe__text-wrapper">
+                <div class="subscribe-text">
+                  <p class="subscribe-title">Підписка</p>
+                  <p class="subscribe-desc">Від класицизму до романтизму</p>
+
+                  <form
+                    action="POST"
+                    class="subscribe__form"
+                    onsubmit="this.reset(); return false;"
+                  >
+                    <label for="email"></label>
+                    <input
+                      type="email"
+                      placeholder="Email"
+                      id="email"
+                      class="subscribe__form__field subscribe__form__field--input"
+                      required
+                    >
+                    <img
+                      src="./images/icon_send.svg"
+                      alt="sent"
+                      class="subscribe__sent"
+                    >
+                  </form>
+                </div>
+              </div>
+            </article>
+          </section>
+
+          <section class="contacts" id="contacts">
+            <div class="contacts__container">
+              <div class="contacts__top">
+                <a href="#home" class="contacts_logo-link">
+                  <img
+                    src="images/namu_logo.svg"
+                    class="contacts__logo"
+                    alt="Namu logo"
+                  >
+                </a>
+                <div class="contacts__icons">
+                  <a href="#instagram" class="contacts__insta icon icon--instagram"></a>
+                  <a href="#facebook" class="contacts__facebook icon icon--facebook"></a>
+                </div>
+              </div>
+
+              <div class="contacts__wrapper contacts__wrapper-left">
+                <a href="#contacts" class="contacts__contact">
+                      Графік роботи
+                </a>
+                <p>
+                  <span class="menu__schedule-wrapper-bold"> 12:00 — 20:00</span>  середа <br>
+                  <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  четвер <br>
+                  <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  п’ятниця <br>
+                  <span class="menu__schedule-wrapper-bold">11:00 — 19:00</span>  субота <br>
+                  <span class="menu__schedule-wrapper-bold">11:00 — 19:00</span> неділя <br>
+                </p>
+
+                <p>
+                  <span class="menu__schedule-wrapper-bold"> Вихідні</span>: понеділок, <br>
+                       вівторок <br>
+                      Каса припиняє роботу за <br>
+                      1 годину до закриття <br>
+                      музею
+                </p>
+              </div>
+              <div class="contacts__wrapper contacts__wrapper-center">
+                <a href="#contacts" class="contacts__contact">
+                      Контакти:
+                </a>
+                <div>
+                  <p>
+                          вул. М. Грушевського, 6; Київ, 01001
+                          тел. +38 (044) 278-13-57
+                          факс +38 (044) 278-74-54
+                          e-mail: info@namu.kiev.ua
+                  </p>
+                </div>
+              </div>
+              <div class="contacts-linear">
+                <img
+                  src="images/leaner.png"
+                  alt="linear"
+                  class="contacts-linear-img"
+                >
+              </div>
+              <div class="contacts__wrapper contacts__wrapper-right">
+                <ul class="contacts__list">
+                  <li class="contacts__item">
+                    <a href="#gallery" class="contacts__link">Галерея</a>
+                  </li>
+                  <li class="contacts__item">
+                    <a
+                        href="#events" class="contacts__link">Виставки та  події</a>
+                  </li>
+                  <li class="contacts__item">
+                    <a href="#about_us" class="contacts__link">Про Нас</a>
+                  </li>
+                  <li class="contacts__item">
+                    <a href="#contacts" class="contacts__link">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <span>Copyright © 2019. All Rights Reserved.</span>
+      <span>Designed by Zhyriada Marina</span>
+    </footer>
   </body>
 </html>
