--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,19 @@
         >
       </a>
 
-      <div class="header__bottom">
-        <h1 class="header__bottom--title">ХУДОЖНІЙ МУЗЕЙ</h1>
-
-        <a href="#tickets" class="header__bottom--tickets-link">КВИТКИ</a>
+      <div class="header__img">
+        <img
+          src="/images/header-img.png"
+          alt="the entrance of the museum"
+          class="header__img"
+        >
       </div>
 
+      <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+      <div class="header__link">
+        <a href="#tickets" class="header__link-tickets">КВИТКИ</a>
+      </div>
     </header>
     <!-- #endregion -->
     <!-- #region aside menu -->
@@ -89,12 +96,17 @@
               class="exhibition--image"
             >
 
-            <p class="exhibition--name">ВИСТАВКА</p>
-            <p class="exhibition--date">26.08-29.11.2019</p>
+            <div class="exhibition__wrap">
+              <div class="exhibition__wrap--dates">
+                <p class="exhibition--name">ВИСТАВКА</p>
+                
+                <p class="exhibition--date">26.08-29.11.2019</p>
+              </div>
 
-            <h3 class="exhibition--title">Йду і повертаюсь</h3>
+              <h3 class="exhibition--title">Йду і повертаюсь</h3>
 
-            <p class="exhibition--description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              <p class="exhibition--description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
           </article>
 
           <article class="event__exhibition">
@@ -103,10 +115,18 @@
               alt="drawing of gril and a peacock"
               class="exhibition--image"
             >
-            <p class="exhibition--name">ВИСТАВКА</p>
-            <p class="exhibition--date">26.08-29.11.2019</p>
-            <h3 class="exhibition--title">І спогади і мрії</h3>
-            <p class="exhibition--description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+
+            <div class="exhibition__wrap">
+              <div class="exhibition__wrap--dates">
+                <p class="exhibition--name">ВИСТАВКА</p>
+
+                <p class="exhibition--date">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="exhibition--title">І спогади і мрії</h3>
+
+              <p class="exhibition--description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
           </article>
 
           <article class="event__lecture">
