add normal swiper and scroll appeer effect

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,21 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     >
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    >
+    <script src="https://cdn.jsdelivr.net/npm/wow.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+    <!-- #region swiper link -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    >
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- #endregion -->
   </head>
   <body class="page__body">
     <header class="header page__header">
@@ -31,7 +46,10 @@
           <a href="#menu" class="icon icon--menu icon--menu--on-mobile"></a>
         </div>
 
-        <div class="header__content">
+        <div
+          class="header__content wow animate__fadeInLeft"
+          data-wow-duration="2s"
+        >
           <a href="#menu" class="icon icon--menu header__menu-icon"></a>
 
           <h1 class="header__title">Художній Музей</h1>
@@ -116,7 +134,11 @@
       <section class="main-content__events events" id="events">
         <h2 class="events__title main-content__title">Актуальні події</h2>
 
-        <article class="events__exhibition exhibition">
+        <article
+          class="events__exhibition exhibition wow animate__fadeInLeft"
+          data-wow-duration="2s"
+          data-wow-offset="400"
+        >
           <img
             src="./images/events/event_gone_return.jpg"
             alt="The picture of the event go and return"
@@ -138,7 +160,11 @@
           </div>
         </article>
 
-        <article class="events__exhibition exhibition">
+        <article
+          class="events__exhibition exhibition wow animate__fadeInLeft"
+          data-wow-duration="2s"
+          data-wow-offset="100"
+        >
           <img
             src="./images/events/event_wish_memoirs.jpg"
             alt="The picture of the event memories and a dream"
@@ -167,7 +193,11 @@
             class="lecture__image"
           >
 
-          <div class="lecture__description">
+          <div
+            class="lecture__description wow animate__fadeInDown"
+            data-wow-duration="2s"
+            data-wow-offset="100"
+          >
             <div class="lecture__subhead">
               <h4 class="lecture__name events__name">Лекція</h4>
 
@@ -179,75 +209,45 @@
         </article>
       </section>
 
-      <section class="main-content__gallery gallery" id="gallery">
+      <section
+        class="main-content__gallery gallery wow animate__fadeInLeft"
+        data-wow-duration="2s"
+        data-wow-offset="100"
+        id="gallery"
+      >
         <h2 class="gallery__title main-content__title">Галерея</h2>
-        <article class="gallery__images">
-          <div class="gallery__slides">
-            <input
-              type="radio"
-              name="radio-btn"
-              id="radio1"
-              class="gallery__radio-button gallery__radio-button--first"
-              checked
-            >
-            <input
-              type="radio"
-              name="radio-btn"
-              id="radio2"
-              class="gallery__radio-button gallery__radio-button--second"
-            >
-            <input
-              type="radio"
-              name="radio-btn"
-              id="radio3"
-              class="gallery__radio-button gallery__radio-button--third"
-            >
-            <input
-              type="radio"
-              name="radio-btn"
-              id="radio4"
-              class="gallery__radio-button gallery__radio-button--fourth"
-            >
-
-            <div class="gallery__slide gallery__slide--first">
+        <article class="swiper gallery__swiper" id="gallery__swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide swiper-slide--first">
               <img
                 src="./images/gallery/gallery_1.jpg"
                 alt="Ukrainian girl in traditional clothes"
-                class="gallery__picture "
+                class="swiper__picture"
               >
             </div>
-
-            <div class="gallery__slide gallery__slide--second">
+            <div class="swiper-slide swiper-slide--second">
               <img
                 src="./images/gallery/gallery_2.jpg"
                 alt="Ukrainian traditional village"
-                class="gallery__picture "
+                class="swiper__picture"
               >
             </div>
-
-            <div class="gallery__slide gallery__slide--third">
+            <div class="swiper-slide swiper-slide--third">
               <img
                 src="./images/gallery/gallery_3.jpg"
                 alt="Picture of girl which sit in a park area"
-                class="gallery__picture "
+                class="swiper__picture"
               >
             </div>
-
-            <div class="gallery__slide gallery__slide--fourth">
+            <div class="swiper-slide swiper-slide--fourth">
               <img
                 src="./images/gallery/gallery_4.jpg"
                 alt="Ukrainian Black Sea"
-                class="gallery__picture"
+                class="swiper__picture"
               >
             </div>
-
-            <div class="gallery__navigation-manual">
-              <label for="radio1" class="gallery__manual-btn gallery__manual-btn--1"></label>
-              <label for="radio2" class="gallery__manual-btn gallery__manual-btn--2"></label>
-              <label for="radio3" class="gallery__manual-btn gallery__manual-btn--3"></label>
-              <label for="radio4" class="gallery__manual-btn gallery__manual-btn--4"></label>
-            </div>
           </div>
+          <div class="swiper-pagination"></div>
         </article>
       </section>
 
@@ -259,7 +259,11 @@
             class="subscription__bg"
           >
 
-          <div class="subscription__container">
+          <div
+            class="subscription__container wow animate__fadeInUp"
+            data-wow-duration="2s"
+            data-wow-offset="100"
+          >
             <h1 class="subscription__title main-content__title">Підписка</h1>
 
             <p class="subscription__description">
@@ -398,7 +402,6 @@
         <span class="footer__copyright">Copyright © 2019. All Rights Reserved.</span>
       </div>
     </footer>
-
     <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
