add task solution2

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="./images/namu_logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -235,16 +236,19 @@
                     <label for="email"></label>
                     <input
                       type="email"
-                      placeholder="Email"
+                      placeholder="E-mail"
                       id="email"
                       class="subscribe__form__field subscribe__form__field--input"
                       required
                     >
-                    <img
+                    <button type="submit" class="subscribe__form_btn">
+                      <img
                       src="./images/icon_send.svg"
                       alt="sent"
                       class="subscribe__sent"
                     >
+                    </button>
+
                   </form>
                 </div>
               </div>
@@ -262,8 +266,8 @@
                   >
                 </a>
                 <div class="contacts__icons">
-                  <a href="#instagram" class="contacts__insta icon icon--instagram"></a>
-                  <a href="#facebook" class="contacts__facebook icon icon--facebook"></a>
+                  <a href="https://www.instagram.com/namu.museum/" class="contacts__insta icon icon--instagram"></a>
+                  <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" class="contacts__facebook icon icon--facebook"></a>
                 </div>
               </div>
 
@@ -292,12 +296,29 @@
                       Контакти:
                 </a>
                 <div>
-                  <p>
-                          вул. М. Грушевського, 6; Київ, 01001
-                          тел. +38 (044) 278-13-57
-                          факс +38 (044) 278-74-54
-                          e-mail: info@namu.kiev.ua
-                  </p>
+                  <a
+                  href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+                  class="contacts-info"
+                  target="_blank"
+                  >
+                    <p class="contacts-info__value">
+                    вул. М. Грушевського, 6; Київ, 01001
+                    </p>
+                  </a>
+                  <a
+                  href="tel:+38 (044) 278-13-57"
+                  class="contacts-info"
+                  >
+                    <p class="contacts-info__value">тел. +38 (044) 278-13-57
+                      <br> факс +38 (044) 278-74-54
+                    </p>
+                  </a>
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    class="contacts-info"
+                  >
+                    <p class="contacts-info__value">e-mail: info@namu.kiev.ua</p>
+                  </a>
                 </div>
               </div>
               <div class="contacts-linear">
