--- a/src/index.html
+++ b/src/index.html
@@ -311,4 +311,6 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
   <!-- redeploy -->
+  <!-- redeploy
+  second -->
 </html>
