--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,8 @@
       <section class="header__block">
         <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
         <div class="header__ticket">
-          <span class="header__inskription">КВИТКИ</span>
-          <a class="header__button" href="#">
-          </a>
+          <a href="#" class="header__inskription">КВИТКИ</a>
+          <a class="header__button" href="#"></a>
         </div>
       </section>
 
@@ -92,9 +91,9 @@
     <main>
       <div class="container">
         <div id="actual" class="events">
-          <span class="events__before">ПОДІЇ</span>
+          <a href="#event" class="events__before">ПОДІЇ</a>
 
-          <h2 class="events__name title">Актуальні події</h2>
+          <h2 class="events__name title" id="event">Актуальні події</h2>
 
           <section class="events__conteiner">
             <div class="events__block">
@@ -284,7 +283,7 @@
                     <a href="fax:+38(044)278-74-54" class="footer__link">факс +38 (044) 278-74-54</a>
                   </li>
                   <li class="footer__item">
-                    <a href="https://mail.google.com/" class="footer__link"> e-mail: info@namu.kiev.ua</a>
+                    <a href="mailto:info@namu.kiev.ua" class="footer__link"> e-mail: info@namu.kiev.ua</a>
                   </li>
                 </ul>
               </section>
