--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,11 @@
 
               <div class="button-arrow"></div>
             </a>
+
+            <div class="art-museum__aside-label aside-label">
+              <div class="aside-label__line"></div>
+              <p class="aside-label__name">Події</p>
+            </div>
           </div>
         </div>
       </div>
@@ -333,7 +338,6 @@
         <div class="footer__content">
           <div class="footer__top-bar">
             <a href="#home" class="footer__logo logo"></a>
-
 
             <div class="footer__social-media">
               <a
