Add hover effects and images stretching

--- a/src/index.html
+++ b/src/index.html
@@ -21,50 +21,52 @@
 
   <body class="page__body">
     <header class="header">
+      <img
+        src="images/header-bg.png"
+        alt="Header background"
+        class="header__background"
+      >
       <div class="container">
-        <div class="header__content">
+        <a href="#menu" class="header__menu-link">
           <img
-            src="images/header-bg.png"
-            alt="Header background"
-            class="header__background"
+            src="images/icons/icon-burger-menu.svg"
+            alt="Menu icon"
+            class="header__menu-icon"
           >
+        </a>
+      </div>
 
-          <a href="#menu" class="header__menu-link">
-            <img
-              src="images/icons/icon-burger-menu.svg"
-              alt="Menu icon"
-              class="header__menu-icon"
-            >
-          </a>
+      <a href="#" class="header__logo-link">
+        <p class="header__logo">NA<br>MU</p>
+      </a>
 
-          <a href="#" class="header__logo-link">
-            <p class="header__logo">NA<br>MU</p>
-          </a>
+      <div class="header__content container">
+        <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
 
-          <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+        <div class="header__tickets">
+          <a href="#current-events" class="tickets">
+            <p class="tickets__text">КВИТКИ</p>
 
-          <div class="header__tickets">
-            <div class="tickets">
-              <p class="tickets__text">КВИТКИ</p>
-              <a href="#current-events" class="tickets__link">
-                <img
-                  src="images/icons/icon-vector.svg"
-                  alt="Vector icon"
-                  class="tickets__vector"
-                >
-              </a>
+            <div class="tickets__link">
+              <img
+                src="images/icons/icon-vector.svg"
+                alt="Vector icon"
+                class="tickets__vector"
+              >
             </div>
-          </div>
+          </a>
+        </div>
 
-          <div class="header__exhibitions">
-            <a href="#current-events" class="exhibitions">
-              <hr class="exhibitions__line">
-              <p class="exhibitions__text">ПОДІЇ</p>
-            </a>
-          </div>
+        <div class="header__exhibitions-link">
+          <a href="#current-events" class="exhibitions-link">
+            <hr class="exhibitions-link__line">
+            <p class="exhibitions-link__text">ПОДІЇ</p>
+          </a>
         </div>
       </div>
     </header>
+
+    <div class="page__transparency"></div>
 
     <aside class="menu page__menu" id="menu">
       <div class="container">
@@ -80,25 +82,25 @@
           <nav class="nav menu__nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#gallery" class="nav__link">
+                <a href="#gallery" class="nav__link nav__link--color--main-bg">
                   Галерея
                 </a>
               </li>
 
               <li class="nav__item">
-                <a href="#subscription" class="nav__link">
+                <a href="#subscription" class="nav__link nav__link--color--main-bg">
                   Про Нас
                 </a>
               </li>
 
               <li class="nav__item">
-                <a href="#current-events" class="nav__link">
+                <a href="#current-events" class="nav__link nav__link--color--main-bg">
                   Виставки та події
                 </a>
               </li>
 
               <li class="nav__item">
-                <a href="#contacts" class="nav__link">
+                <a href="#contacts" class="nav__link nav__link--color--main-bg">
                   Контакти
                 </a>
               </li>
@@ -143,33 +145,40 @@
           </div>
         </div>
       </div>
-
-      <div class="menu__transparency"></div>
     </aside>
+
 
     <main class="main">
       <div class="main__content">
-        <section class="current-events container" id="current-events">
-          <h2 class="current-events__title section-title">
+        <section class="current-events" id="current-events">
+          <h2 class="
+            current-events__title
+            section-title
+            container
+         ">
             Актуальні події
           </h2>
 
           <div class="current-events__content">
-            <article class="event current-events__event">
+            <article class="
+              exhibition
+              current-events__exhibition
+              container
+           ">
               <img
                 src="images/paintings/Painting 1.png"
                 alt="Painting 1"
-                class="event__image event__image-exposition"
+                class="exhibition__image"
               >
 
-              <div class="event__description event__description-exposition">
-                <div class="description">
-                  <div class="description__top">
+              <div class="exhibition__description">
+                <div class="description description-exhibition">
+                  <div class="description__top description-exhibition__top">
                     <p class="description__type">ВИСТАВКА</p>
                     <p class="description__date">26.08-29.11.2019</p>
                   </div>
 
-                  <div class="description__middle">
+                  <div class="description__middle description-exhibition__middle">
                     <h3 class="description__title">Йду і повертаюсь</h3>
                     <img
                       src="images/icons/icon-red.svg"
@@ -189,22 +198,27 @@
               </div>
             </article>
 
-            <article class="event current-events__event">
+            <article class="
+              exhibition
+              current-events__exhibition
+              container
+           ">
               <img
                 src="images/paintings/Painting 2.png"
                 alt="Painting 2"
-                class="event__image event__image-exposition"
+                class="exhibition__image"
               >
 
-              <div class="event__description event__description-exposition">
-                <div class="description">
-                  <div class="description__top">
+              <div class="exhibition__description">
+                <div class="description description-exhibition">
+                  <div class="description__top description-exhibition__top">
                     <p class="description__type">ВИСТАВКА</p>
                     <p class="description__date">26.08-29.11.2019</p>
                   </div>
 
-                  <div class="description__middle">
+                  <div class="description__middle description-exhibition__middle">
                     <h3 class="description__title">І спогади і мрії</h3>
+
                     <img
                       src="images/icons/icon-red.svg"
                       alt="Red icon"
@@ -224,23 +238,24 @@
               </div>
             </article>
 
-            <article class="event current-events__event">
+            <article class="lection current-events__lection">
               <img
                 src="images/paintings/Painting 3.png"
                 alt="Painting 3"
-                class="event__image event__image-lection"
+                class="lection__image"
               >
 
-              <div class="event__description event__description-lection">
-                <div class="description description-lection">
-                  <div class="description__top description-lection__top">
-                    <p class="description__type">ЛЕКЦІЯ</p>
-                    <p class="description__date">26/08/2019 - 11:00</p>
+              <div class="lection__content container">
+                <div class="lection__description">
+                  <div class="description description-lection">
+                    <div class="description__top description-lection__top">
+                      <p class="description__type">ЛЕКЦІЯ</p>
+                      <p class="description__date">26/08/2019 - 11:00</p>
+                    </div>
+                    <h3 class="description__title description-lection__title">
+                      Від класицизму до романтизму
+                    </h3>
                   </div>
-
-                  <h3 class="description__title description-lection__title">
-                    Від класицизму до романтизму
-                  </h3>
                 </div>
               </div>
             </article>
@@ -324,7 +339,7 @@
           </div>
         </section>
 
-        <section class="subscription main__subscription" id="subscription">
+        <section class="subscription" id="subscription">
           <div class="subscription__content container">
             <h2 class="subscription__title section-title">
               Підписка
@@ -435,7 +450,7 @@
                 </li>
               </ul>
 
-              <br>
+              <div class="schedule__linebreaker"><br></div>
 
               <p class="schedule__info">
                 <span class="schedule--text--bold">Вихідні:</span>
