opt everything for every device

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <!-- #endregion -->
-  <body class="page__body">
+  <body class="page page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
     <!-- #region header -->
     <header class="header" id="header">
@@ -99,7 +99,7 @@
             <div class="exhibition__wrap">
               <div class="exhibition__wrap--dates">
                 <p class="exhibition--name">ВИСТАВКА</p>
-                
+
                 <p class="exhibition--date">26.08-29.11.2019</p>
               </div>
 
@@ -147,8 +147,8 @@
       <!-- #region gallery -->
       <div class="section" id="gallery">
         <section class="gallery">
-          <h2 class="section__title">Галерея</h2>
-          <div class="gallery__slide gallery__slide-1 fade">
+          <h2 class="section__title gallery__title">Галерея</h2>
+          <div class="gallery__slide gallery__slide-1">
             <img
               src="/images/gallery/1st.png"
               class="gallery__image"
@@ -156,7 +156,7 @@
             >
           </div>
 
-          <div class="gallery__slide gallery__slide-2 fade">
+          <div class="gallery__slide gallery__slide-2">
             <img
               src="/images/gallery/2nd.png"
               class="gallery__image"
@@ -164,7 +164,7 @@
             >
           </div>
 
-          <div class="gallery__slide gallery__slide-3 fade">
+          <div class="gallery__slide gallery__slide-3">
             <img
               src="/images/gallery/3rd.png"
               class="gallery__image"
@@ -172,7 +172,7 @@
             >
           </div>
 
-          <div class="gallery__slide gallery__slide-4 fade">
+          <div class="gallery__slide gallery__slide-4">
             <img
               src="/images/gallery/4th.png"
               class="gallery__image"
