--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
       <div class="header__link">
-        <a href="#tickets" class="header__link-tickets">КВИТКИ</a>
+        <a href="#events" class="header__link-tickets">КВИТКИ</a>
       </div>
     </header>
     <!-- #endregion -->
@@ -53,7 +53,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#about-us" class="nav__link">Про Нас</a>
+              <a href="#subscription" class="nav__link">Про Нас</a>
             </li>
 
             <li class="nav__item">
@@ -285,7 +285,7 @@
           </li>
 
           <li class="links__item">
-            <a href="#about-us" class="links__link">Про Нас</a>
+            <a href="#subscription" class="links__link">Про Нас</a>
           </li>
 
           <li class="links__item">
