--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,6 @@
         </div>
       </section>
 
-
       <section id="backdrop" class="page__backdrop">
         <section class="page__menu">
           <section class="page__menu-content">
@@ -69,17 +68,19 @@
               <p class="page__graph">Графік роботи</p>
               <div class="page__paragraphs">
                 <p class="page__time-work">
-                  <strong>12:00— 20:00</strong> середа <br>
-                  <strong>12:00 — 20:00</strong> четвер <br>
-                  <strong>12:00 — 20:00</strong> п’ятниця <br>
-                  <strong>11:00 — 19:00</strong> субота <br>
-                  <strong>11:00 — 19:00</strong> неділя
+                  <span class="page__strong-text">12:00 — 20:00</span> <span class="page__text">середа</span> <br>
+                  <span class="page__strong-text">12:00 — 20:00</span> <span class="page__text">четвер</span> <br>
+                  <span class="page__strong-text">12:00 — 20:00</span> <span class="page__text">п’ятниця</span> <br>
+                  <span class="page__strong-text">11:00 — 19:00</span> <span class="page__text">субота</span> <br>
+                  <span class="page__strong-text">11:00 — 19:00</span> <span class="page__text">неділя</span>
                 </p>
 
                 <p class="page__holiday">
-                  <strong>Вихідні:</strong> понеділок, вівторок
+                  <span class="page__strong-text">Вихідні:</span>
+                  <span class="page__text">понеділок, вівторок
                   Каса припиняє роботу за 1 годину
                   до закриття музею
+                  </span>
                 </p>
               </div>
             </div>
@@ -214,6 +215,7 @@
             name="email"
             placeholder="E-mail"
             required
+            target="_blank"
           >
           <button class="subscription__button" type="submit"></button>
         </form>
