Add contacts links

--- a/src/index.html
+++ b/src/index.html
@@ -463,12 +463,35 @@
           <div class="contacts footer__contacts" id="contacts">
             <h4 class="contacts__title">Контакти:</h4>
 
-            <p class="contacts__info">
-              вул. М. Грушевського, 6; Київ, 01001
-              тел. +38 (044) 278-13-57
-              факс +38 (044) 278-74-54
-              e-mail: info@namu.kiev.ua
-            </p>
+            <div class="contacts__info">
+              <p class="contacts__address">
+                <a
+                  href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.4493441,30.5284204,17z/data=!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+                  target="_blank"
+                  class="contacts__link"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </p>
+
+              <p class="contacts__telephone">
+                <a href="tel:+38 (044) 278-13-57" class="contacts__link">
+                  тел. +38 (044) 278-13-57
+                </a>
+              </p>
+
+              <p class="contacts__fax">
+                <a href="tel:+38 (044) 278-74-54" class="contacts__link">
+                  факс +38 (044) 278-74-54
+                </a>
+              </p>
+
+              <p class="contacts__email">
+                <a href="mailto: info@namu.kiev.ua" class="contacts__link">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
           </div>
 
           <a href="#" class="footer__home-link">
